== Version 0.5.1 (in SVN)

* Added channel constraints involving set variables.
* Added set min and max constraints.
* Added set sum constraints (optionally weighted).
* Added include (match) constraint for sets.
* Added distinct constraints (distinct and at most one) for sets.
* Added branch and bound (optimization search).

== Version 0.5.0
This release adds set variables and some of their constraints, along with the 
last of the boolean constraints.

* Added exclusive or and implication.
* Added conjunction and disjunction for boolean enumerations.
* Added set variables. They are created using Model{#set_var, #set_var_array, #set_var_matrix}.
* Added domain constraints for set variables.
* Added relation constraints for set variables.
* Added set cardinality constraints.

== Version 0.4.0
This release adds most of the integer variable constraints supported by Gecode.

* [#11861] Fixed a bug stopping the creation of int variables with non-range domains.
* Added domain constraints for int variables.
* Added equality constraint for int enums.
* Matrices of integer and boolean variables can now be created using Model#int_var_matrix Model#bool_var_matrix.
* Added channel constraint for int enums.
* Added element constraints (variable array access).
* Added count constraints.
* Added sortedness constraints.
* Added arithmetic constraints (min, max, abs and variable multiplication).

== Version 0.3.0
This release fleshes out the existing constraints with things such as 
reification and adds boolean variables and their basic constraints.

* The constructor of Gecode::Model no longer has to be called by classes inheriting from it.
* Added Model#reset! which resets a model after search.
* Added Model#solution which passes the first solution to a block and returns the result of that block.
* Added Model#each_solution which iterates over each solution.
* Added boolean variables. They are created using Model#bool_var and Model#bool_var_array .