@@ -6,6 +6,7 @@
 * Added include (match) constraint for sets.
 * Added distinct constraints (distinct and at most one) for sets.
 * Added branch and bound (optimization search).
+* Assigned values of variables are now accessed using #value instread of various previous method.
 
 == Version 0.5.0
 This release adds set variables and some of their constraints, along with the 
